--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.24.0",
+    "body-parser": "^1.19.1",
     "discord.js": "^13.4.0",
-    "express": "^4.17.2"
+    "dotenv": "^10.0.0",
+    "express": "^4.17.2",
+    "toad-scheduler": "^1.6.0"
   },
   "engines": {
     "node": "16.13.1"
