--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "discord.js": "^13.4.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
-    "toad-scheduler": "^1.6.0"
+    "node-schedule": "^2.1.0"
   },
   "engines": {
     "node": "16.13.1"
